--- a/index.html
+++ b/index.html
@@ -1,1 +1,153 @@
     <title>WebStudio</title>
+  </head>
+  <body>
+    <!-- Header section -->
+    <header>
+      <nav>
+        <a href="./index.html" lang="en"><span>Web</span>Studio</a>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <!-- Main section -->
+    <main>
+      <!-- Hero section -->
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+      <!-- Features section -->
+      <section>
+        <h2>Наши особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- Work section -->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/work-1.jpg"
+              alt="Разработчик программирует"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/work-2.jpg"
+              alt="Разработчик работает над мобильным приложением"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/work-3.jpg"
+              alt="Дизайнер подбирает цветовую палитру"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+      <!-- Team section -->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/photo-1.jpg"
+              alt="Игорь Демьяненко"
+              width="270"
+              height="260"
+            />
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/photo-2.jpg"
+              alt="Ольга Репина"
+              width="270"
+              height="260"
+            />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/photo-3.jpg"
+              alt="Николай Тарасов"
+              width="270"
+              height="260"
+            />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/photo-4.jpg"
+              alt="Михаил Ермаков"
+              width="270"
+              height="260"
+            />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!-- Footer section -->
+    <footer>
+      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
+      <address>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/qhGqYUwrLDQrgfdt8" target="_blank"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  </body>
+</html>
